Fixed text jumping arond

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     /*Content*/
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    text-align: center;
+    /* text-align: center; */
     
     /* scrollbar-width: 0px; */
 }
@@ -49,6 +49,7 @@ footer {
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     width: 80vw;
     max-width: 800px;
@@ -61,6 +62,8 @@ footer {
     
     padding: 15px;
     overflow: hidden;
+
+    text-align: center;
 
     backdrop-filter: blur(4px);
 }
